--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-		content="Кирилл Богачев: бурение, заканчивание скважин с большим отходом от вертикали. Морское бурение, обучение, консалтинг, аудит, супервайзинг.">
+		content="Буровой эксперт: бурение, заканчивание скважин с большим отходом от вертикали. Морское бурение, обучение, консалтинг, аудит, супервайзинг.">
 	<meta name="Keywords" content="бурение, морское бурение, обучение, консалтинг, аудит, супервайзинг">
     <title>Буровой эксперт</title>
     <link rel="stylesheet" href="./style/style.css">
@@ -16,11 +16,12 @@
         <div class="container d-flex justify-content-between align-items-center">
             <div class="header-wrapper d-flex align-items-center">
                 <div class="indicator-wrap">
-                    <a href="/">
-                        <img src="./img/frame.png" alt="logo: Буровой эксперт" class="header-logo">
-                    </a>
+                    
                     <span class="indicator"></span>
                 </div>
+                <a href="/">
+                    <img src="./img/frame.png" alt="logo: Буровой эксперт" class="header-logo">
+                </a>
                 <span class="header-description">Буровой эксперт</span>
             </div>
             <div class="header-menu">
@@ -48,12 +49,12 @@
         <section class="hero">
             <div class="container">
                 <ul class="hero-content">
-                    <li class="hero-content-item"><a href="#">Бурение, заканчивание скважин с большим отходом от вертикали</a></li>
-                    <li class="hero-content-item"><a href="#">Морское бурение</a></li>
-                    <li class="hero-content-item"><a href="#">Консалтинг</a></li>
-                    <li class="hero-content-item"><a href="#">Аудит</a></li>
-                    <li class="hero-content-item"><a href="#">Супервайзинг</a></li>
-                    <li class="hero-content-item"><a href="#">Обучение</a></li>
+                    <li class="hero-content-item">Бурение, заканчивание скважин с большим отходом от вертикали</li>
+                    <li class="hero-content-item">Морское бурение</li>
+                    <li class="hero-content-item">Консалтинг</li>
+                    <li class="hero-content-item">Аудит</li>
+                    <li class="hero-content-item">Супервайзинг</li>
+                    <li class="hero-content-item">Обучение</li>
                 </ul>
             </div>
         </section>
@@ -209,7 +210,9 @@
                 </div>
                 <form action="#" class="form">
                     <input type="email" class="form-input" placeholder="Ваш email">
+                    <span class="email-error"></span>
                     <textarea name="message" id="" class="form-textarea" placeholder="Ваше сообщение"></textarea>
+                    <span class="text-error"></span>
                     <button type="submit" class="form-btn" disabled>Отправить</button>
                 </form>
             </div>
